fix: removed custom scrollbar, fixed topbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -122,23 +122,6 @@
   scrollbar-width: none;
 }
 
-/* Define scrollbar styles for Webkit browsers (Chrome, Safari, etc.) */
-::-webkit-scrollbar {
-  width: 4px; /* Width of the scrollbar */
-}
-
-::-webkit-scrollbar-track {
-  background: #f1f1f1; /* Color of the track */
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: #888; /* Color of the thumb */
-  border-radius: 6px; /* Rounded corners of the thumb */
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background-color: #555; /* Color of the thumb on hover */
-}
 
 /* loading animation  */
 .loader {
